{
  "sourceLanguage" : "en",
  "strings" : {
    "Data loaded successfully." : {
      "extractionState" : "manual"
    },
    "Error" : {
      "extractionState" : "manual"
    },
    "Import a KML file from Settings %@\nto see your places here." : {
      "comment" : "A description of how to import a KML file to see places. The argument is the “gearshape.fill” symbol.",
      "isCommentAutoGenerated" : true
    },
    "Import Data" : {
      "comment" : "Text for a settings item that imports data.",
      "isCommentAutoGenerated" : true
    },
    "List" : {
      "comment" : "A label displayed in the tab bar for the list view.",
      "isCommentAutoGenerated" : true
    },
    "Map" : {
      "comment" : "A label displayed in the tab bar for the map view.",
      "isCommentAutoGenerated" : true
    },
    "My Places" : {
      "extractionState" : "manual"
    },
    "No description" : {
      "extractionState" : "manual"
    },
    "No matching places found." : {
      "comment" : "A message displayed when a search returns no results.",
      "isCommentAutoGenerated" : true
    },
    "No place data" : {
      "comment" : "A placeholder message displayed when there is no place data.",
      "isCommentAutoGenerated" : true
    },
    "Settings" : {
      "comment" : "A label displayed in the settings tab.",
      "isCommentAutoGenerated" : true
    },
    "Success" : {
      "extractionState" : "manual"
    },
    "The data could not be loaded.\\n\\n%@" : {
      "extractionState" : "manual"
    },
    "Untitled Folder" : {
      "extractionState" : "manual"
    },
    "Untitled Place" : {
      "extractionState" : "manual"
    },
    "Use Test Data" : {
      "extractionState" : "manual"
    }
  },
  "version" : "1.2"
}