...
        ScrollView {
            VStack(alignment: .leading, spacing: 20) {
                if let mapData = viewModel.mapData {
                    mapView(mapData: mapData)
                }
                Text(viewModel.name).bold()
                    .accessibilityIdentifier("Details Name")
                Text(viewModel.kmlDescription)
                    .accessibilityIdentifier("Details Description")
                Spacer()
            }
            .padding(20)
            .frame(maxWidth: .infinity, alignment: .leading)
        }
        .navigationTitle(viewModel.name)
...
